--- a/styles/average.scss
+++ b/styles/average.scss
@@ -1,7 +1,7 @@
 @import 'colors.scss';
 @import 'rules.scss';
 
-@media screen and (max-width: 100vw) {
+@media screen and (max-width: 768px) {
   body {
     width: 100vw;
   }
