--- a/styles/mobile-shorter.scss
+++ b/styles/mobile-shorter.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: 375px) and (max-height: 667px) {
+@media screen and ((max-width: 375px) and (max-height: 667px)) {
   /*   MAIN SECTION   */
   .main {
     .main-block {
