--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -85,6 +85,7 @@ h2 {
 }
 .header .header__block {
   height: 4.167vw;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
