--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,6 +1,7 @@
 @media screen and (max-width: 375px) {
   body {
     width: 100vw;
+    overflow-x: hidden;
   }
   .container {
     max-width: 92vw;
