--- a/styles/average.scss
+++ b/styles/average.scss
@@ -10,6 +10,7 @@
   }
   section {
     padding-bottom: 19.531vw;
+    overflow-x: hidden;
   }
   h2 {
     @include section-title(9.115vw, 10.938vw);
@@ -23,11 +24,15 @@
   }
   br.desktop,
   span.desktop,
-  div.desktop {
+  div.desktop,
+  img.desktop {
     display: none;
   }
   br.average {
     display: inline;
+  }
+  img.average {
+    display: block;
   }
 
   /*   HEADER   */
