--- a/styles/mobile.scss
+++ b/styles/mobile.scss
@@ -8,9 +8,11 @@
   }
   .container {
     max-width: 92vw;
+    
   }
   section {
     padding-bottom: 18.667vw;
+    overflow-x: hidden;
   }
   .button {
     @include button(16vw, 4vw, $color_button-black, $color_white);
@@ -22,11 +24,11 @@
   br.mobile {
     display: inline;
   }
-  h3.mobile {
+  h3.mobile, img.mobile {
     display: block;
   }
   br.average,
-  h3.average {
+  h3.average, img.average {
     display: none;
   }
 
