--- a/styles/average.css
+++ b/styles/average.css
@@ -56,11 +56,11 @@
   .desktop {
     display: none;
   }
+  .average {
+    display: block;
+  }
   br.average {
     display: inline;
-  }
-  img.average {
-    display: block;
   }
   /*   HEADER   */
   .header {
