--- a/styles/average.scss
+++ b/styles/average.scss
@@ -28,12 +28,13 @@
   .desktop {
     display: none;
   }
+  .average {
+    display: block;
+  }
   br.average {
     display: inline;
   }
-  img.average {
-    display: block;
-  }
+  
 
   /*   HEADER   */
   .header {
