--- a/src/styles/desktop.scss
+++ b/src/styles/desktop.scss
@@ -138,6 +138,9 @@ h2 {
         gap: -0.26vw;
         left: -0.469vw;
         border-radius: 0.521vw;
+        a {
+          color: $color_olive;
+        }
         .lang-select {
           width: 0.573vw;
           transition: 0.3s ease-out;
@@ -410,7 +413,7 @@ h2 {
     background-size: cover;
     background-blend-mode: hard-light;
     display: flex;
-    justify-content: space-between;
+    column-gap: 7.708vw;
   }
   .about-project__picture {
     position: relative;
@@ -598,7 +601,7 @@ h2 {
   }
   .mobile-app__picture {
     position: absolute;
-    top: -2.131vw;
+    bottom: -4.688vw;
     right: -9.891vw;
     z-index: -1;
     .mobile-app__mobile-img {
