--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -343,7 +343,7 @@
       }
     }
     .mobile-app__picture {
-      top: 138.4vw;
+      bottom: -4.8vw;
       right: -54.667vw;
       .mobile-app__mobile-img {
         width: 182.133vw;
