--- a/styles/average.css
+++ b/styles/average.css
@@ -91,16 +91,17 @@
     -webkit-backdrop-filter: blur(0.26vw);
             backdrop-filter: blur(0.26vw);
     z-index: 110;
-    transition: 0.3s ease-out;
+    transition: transform 0.3s ease-out;
   }
   .header .header__block .hidden {
-    opacity: 0;
+    width: 0;
     z-index: -1000;
   }
   .header .header__block .header__nav-bar {
     display: block;
     padding: 0 3.906vw;
     width: 53.776vw;
+    height: 100vh;
     background-color: #969879;
     position: fixed;
     left: 0;
@@ -487,7 +488,7 @@
     top: 0.781vw;
   }
   .mobile-app .mobile-app__picture {
-    top: 22.635vw;
+    bottom: 0;
     right: -3.906vw;
   }
   .mobile-app .mobile-app__picture .mobile-app__mobile-img {
